[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Helpers/MenuTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Helpers/MenuItems.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0705882, 0.203922, 0.611765 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -178.0
margin_right = -30.0
margin_bottom = 172.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 485.0
margin_bottom = 350.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 485.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 2 )
text = "Grim Edvard"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 485.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Resume" type="Button" parent="Control/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 485.0
margin_bottom = 34.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.607843, 0.639216, 0.976471, 1 )
text = "Resume Game"
flat = true
align = 0

[node name="Restart" type="Button" parent="Control/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 485.0
margin_bottom = 72.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.607843, 0.639216, 0.976471, 1 )
text = "Restart From Last Checkpoint"
flat = true
align = 0

[node name="Options" type="Button" parent="Control/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 485.0
margin_bottom = 110.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.607843, 0.639216, 0.976471, 1 )
text = "Options [under development]"
flat = true
align = 0

[node name="Quit_to_menu" type="Button" parent="Control/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 485.0
margin_bottom = 148.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.607843, 0.639216, 0.976471, 1 )
text = "Quit to Menu [under development]"
flat = true
align = 0

[node name="Quit_to_desctop" type="Button" parent="Control/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 485.0
margin_bottom = 186.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.607843, 0.639216, 0.976471, 1 )
text = "Quit to Desctop"
flat = true
align = 0

[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/VBoxContainer/Restart" to="." method="_on_Restart"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/VBoxContainer/Quit_to_desctop" to="." method="_on_QtD"]
